# starter-modal

./: .env.example  .gitignore  README.md  modal_app.py  predict.py  pyproject.toml
docs/: advanced.md
explaining_markets/: __init__.py  config.py  webhook_verification.py
src/explaining_markets/: client.py  config.py  event_utils.py  webhook_verification.py
tests/: test_predict.py  test_vectors.json  test_webhook_verification.py
