[project]
name = "explaining-markets-modal-starter"
version = "0.1.0"
description = "A minimal Modal starter for the Explaining Markets competition."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "modal>=0.64",
    "fastapi>=0.110",
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic>=2.6",
    # Needed locally so `modal deploy` can read .env via Secret.from_dotenv.
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The package is importable via the editable install (which points at src/).
# "." restores only the repo-root entry that the top-level entry scripts
# (predict.py, modal_app.py) need — it does not re-expose the package from root.
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/explaining_markets"]
